--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~44.0.0",
+    "expo": "^44.0.5",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
     "formik": "^2.2.9",
+    "native-base": "^3.3.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
