--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/native-stack": "^6.3.0",
     "expo": "^44.0.5",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
@@ -19,7 +21,10 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "0.17.1",
+    "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
