--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/native-stack": "^6.3.0",
+    "axios": "^0.25.0",
+    "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
