--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "fittrackplus",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "type": "commonjs",
   "scripts": {
     "start": "expo start",
+    "server": "node backend/server",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
@@ -12,10 +14,14 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.7",
     "@react-navigation/native-stack": "^6.3.0",
+    "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
+    "express": "^4.17.2",
     "formik": "^2.2.9",
+    "mongoose": "^6.1.10",
+    "morgan": "^1.10.0",
     "native-base": "^3.3.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
