One small step for man, one giant leap for our group project.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/native": "^6.0.7",
+    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.3.0",
     "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
