--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/art": "^1.2.0",
+    "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.3.0",
     "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
+    "expo-blur": "^11.0.0",
     "expo-constants": "~13.0.1",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.2",
@@ -24,9 +27,11 @@
     "mongoose": "^6.1.10",
     "morgan": "^1.10.0",
     "native-base": "^3.3.4",
+    "normalize-color": "^0.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-pie-chart": "^2.0.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.1.1",
