--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
     "expo-blur": "^11.0.0",
-    "expo-constants": "~13.0.1",
+    "expo-constants": "^13.0.2",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.2",
     "formik": "^2.2.9",
@@ -30,11 +30,13 @@
     "normalize-color": "^0.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-donut-chart": "^1.2.2",
     "react-native": "0.64.3",
     "react-native-pie-chart": "^2.0.2",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.3"
