--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
   "name": "fittrackplus",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "type": "commonjs",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "server": "node backend/server",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.3.0",
     "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
     "expo-constants": "~13.0.1",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.2",
     "formik": "^2.2.9",
@@ -27,9 +27,11 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
-    "react-native-svg": "^12.1.1",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.3"
