--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/art": "^1.2.0",
     "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.2.0",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.3.0",
     "axios": "^0.26.1",
@@ -28,8 +29,8 @@
     "mongoose": "^6.1.10",
     "morgan": "^1.10.0",
     "native-base": "^3.3.4",
-    "qs": "^6.10.3",
     "normalize-color": "^0.1.0",
+    "qs": "^6.10.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-donut-chart": "^1.2.2",
