--- a/package.json
+++ b/package.json
@@ -11,35 +11,36 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-native-community/art": "^1.2.0",
     "@react-native/normalize-color": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
+    "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.8",
     "@react-navigation/native-stack": "^6.3.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "expo": "^44.0.5",
-    "expo-splash-screen": "~0.14.1",
     "expo-blur": "^11.0.0",
     "expo-constants": "^13.0.2",
+    "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "express": "^4.17.2",
     "formik": "^2.2.9",
     "mongoose": "^6.1.10",
     "morgan": "^1.10.0",
     "native-base": "^3.3.4",
-    "qs": "^6.10.3",
     "normalize-color": "^0.1.0",
+    "qs": "^6.10.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-donut-chart": "^1.2.2",
     "react-native": "0.64.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-screens": "^3.10.2",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
