keyboard scroll on login / register

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native": "0.64.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "^3.3.2",
