--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/art": "^1.2.0",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
-    "@react-navigation/native": "^6.0.8",
+    "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.3.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
@@ -39,11 +40,14 @@
     "react-native": "0.64.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
+    "react-native-circular-progress-indicator": "^3.2.0",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
-    "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.10.2",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
