--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
     "react-native-svg": "^12.3.0",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
+    "react-redux": "^7.2.8",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
