log table no oak no mahogany

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.3.0",
+    "react-native-table-component": "https://github.com/slice312/react-native-table-component.git",
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
     "styled-components": "^5.3.3"
