--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/datetimepicker": "^6.1.2",
@@ -39,9 +40,11 @@
     "react-dom": "17.0.1",
     "react-donut-chart": "^1.2.2",
     "react-native": "0.64.3",
+    "react-native-btr": "^2.1.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-circular-progress-indicator": "^3.2.0",
+    "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pie-chart": "^2.0.2",
