--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-circular-progress-indicator": "^3.2.0",
+    "react-native-console-time-polyfill": "^1.2.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pie-chart": "^2.0.2",
