--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native-stack": "^6.3.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "date-fns": "^2.28.0",
     "expo": "^44.0.5",
     "expo-blur": "^11.0.0",
     "expo-constants": "^13.0.2",
@@ -47,6 +48,7 @@
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
     "react-native-reanimated": "~2.3.1",
+    "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
     "react-native-svg": "^12.3.0",
