--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-blur": "^11.0.0",
     "expo-constants": "^13.0.2",
     "expo-image-picker": "^12.0.2",
+    "expo-media-library": "^14.0.1",
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
@@ -32,12 +33,15 @@
     "formik": "^2.2.9",
     "mongoose": "^6.1.10",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "native-base": "^3.3.4",
     "normalize-color": "^0.1.0",
     "qs": "^6.10.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-donut-chart": "^1.2.2",
+    "react-file-base64": "^1.0.3",
     "react-native": "0.64.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
