--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
+    "react-native-radio-buttons-group": "^2.2.10",
     "react-native-reanimated": "~2.3.1",
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "3.3.2",
