Added Workoutlog access to Redux, datetime themes, multiple workoutlog rendering

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^6.3.0",
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "dateformat": "^5.0.3",
     "expo": "^44.0.5",
     "expo-blur": "^11.0.0",
     "expo-constants": "^13.0.2",
