--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-native-web": "0.17.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.8",
+    "react-uuid": "^1.0.2",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
