--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.28.0",
+    "dateformat": "^5.0.3",
     "expo": "^44.0.5",
     "expo-blur": "^11.0.0",
     "expo-constants": "^13.0.2",
