--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.17.3",
     "@react-native-community/art": "^1.2.0",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-native/normalize-color": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
@@ -50,6 +51,8 @@
     "react-native-console-time-polyfill": "^1.2.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-paper": "^4.12.0",
+    "react-native-picker": "^4.3.7",
     "react-native-pie-chart": "^2.0.2",
     "react-native-progress": "^5.0.0",
     "react-native-radio-buttons-group": "^2.2.10",
@@ -60,6 +63,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-table-component": "https://github.com/slice312/react-native-table-component.git",
     "react-native-web": "0.17.1",
+    "react-native-wheel-scrollview-picker": "^2.0.1",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.8",
     "redux": "^4.1.2",
