--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-native-console-time-polyfill": "^1.2.3",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-paper": "^4.12.0",
     "react-native-picker": "^4.3.7",
     "react-native-pie-chart": "^2.0.2",
@@ -64,6 +65,7 @@
     "react-native-responsive-linechart": "^5.7.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-select-dropdown": "^1.11.0",
     "react-native-svg": "^12.3.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-table-component": "https://github.com/slice312/react-native-table-component.git",
