--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-circular-progress-indicator": "^3.2.0",
     "react-native-console-time-polyfill": "^1.2.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "^2.4.0",
     "react-native-invertible-scroll-view": "^2.0.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-material-dropdown": "^0.11.1",
