--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "expo-secure-store": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
-    "express": "^4.17.2",
+    "express": "^4.17.3",
+    "fetch": "^1.1.0",
     "formik": "^2.2.9",
     "mongoose": "^6.1.10",
     "morgan": "^1.10.0",
