--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "react-donut-chart": "^1.2.2",
     "react-file-base64": "^1.0.3",
     "react-native": "0.64.3",
+    "react-native-animated-progress": "^1.0.2",
+    "react-native-arc-progress-bar": "^1.0.7",
     "react-native-btr": "^2.1.3",
     "react-native-chart-kit": "^6.12.0",
     "react-native-charts-wrapper": "^0.5.7",
+    "react-native-circular-progress": "^1.3.7",
     "react-native-circular-progress-indicator": "^3.2.0",
     "react-native-console-time-polyfill": "^1.2.3",
     "react-native-date-picker": "4.1.2",
