--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-svg": "^12.3.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-table-component": "https://github.com/slice312/react-native-table-component.git",
+    "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-native-wheel-scrollview-picker": "^2.0.1",
     "react-navigation-stack": "^2.10.4",
